Concat 서비스 수정